fixed overflow and avoiding extra internal scollbar

--- a/www/assets/css/pagestyle2.css
+++ b/www/assets/css/pagestyle2.css
@@ -4529,7 +4529,7 @@ table.checklist td {
 
 .history td.location {
   white-space: nowrap;
-  max-width: 10vw;
+  max-width: 300px;
   overflow: auto;
 }
 
